--- a/index.html
+++ b/index.html
@@ -7,23 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-
-        <!-- This section allows the user to input the desired time in hours, minutes, and seconds. Upon setting the time and clicking the 'Start New Timer' button, a new timer should be started and added to the Active Timers Display Section. -->
-        <div class="timeInput">
-            
-        </div>
-
-        <!-- This section should dynamically display all active timers. Each timer should show the time remaining and have a 'Stop Timer' button to cancel the timer. Make sure that each timer shows the countdown from whatever time was set to 0, and they need to update every second. -->
-        <div class="activeTimerDisplay">
-
-        </div>
-
-        <!-- Upon reaching zero, the display for that timer should change to match the design provided in the Figma file. Additionally, an audio alert of your choice should be played to notify the user that the timer has ended. -->
-        <div class="timerEndDisplay">
-
-        </div>
+    <h1>Multiple Timer App</h1>
+    <div id="container">
+        <p id="para">Set time:</p>
+        <label for="hours">Hours:
+        <input type="number" id="hours" min="0"></label>
+        <label for="minutes">Minutes:
+        <input type="number" id="minutes" min="0"></label>
+        <label for="seconds">Seconds:
+        <input type="number" id="seconds" min="0"></label>
+        <button id="startTimer">Start New Timer</button>
     </div>
+    <h2 id="heading">Current Timers</h2>
+    <div id="activeTimers"></div>
     <script src="script.js"></script>
 </body>
 </html>
